fix:auth request list